fixing the error

--- a/kaggle_llm_pipeline_test.ipynb
+++ b/kaggle_llm_pipeline_test.ipynb
@@ -184,7 +184,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import subprocess\n",
+    "import sys\n",
+    "import traceback\n",
     "from pathlib import Path\n",
     "\n",
     "repo_root = Path.cwd()\n",
@@ -192,28 +193,26 @@
     "if not script_path.exists():\n",
     "    raise FileNotFoundError(f\"Cannot run pipeline: missing {script_path}\")\n",
     "\n",
-    "args = [\n",
-    "    \"python3\",\n",
-    "    str(script_path),\n",
-    "    \"--prompt\",\n",
-    "    seed_prompt,\n",
-    "    \"--output\",\n",
-    "    \".\",\n",
-    "    \"--provider\",\n",
-    "    \"openai\",\n",
-    "    \"--model\",\n",
-    "    \"google/gemma-3n-e4b-it:free\",\n",
-    "]\n",
+    "if str(repo_root) not in sys.path:\n",
+    "    sys.path.insert(0, str(repo_root))\n",
     "\n",
-    "print(\"Running args:\\n\", args)\n",
-    "proc = subprocess.run(args, capture_output=True, text=True, cwd=repo_root)\n",
-    "print(\"STDOUT:\\n\", proc.stdout)\n",
-    "print(\"STDERR:\\n\", proc.stderr)\n",
+    "try:\n",
+    "    from llm_pipeline import run_llm_pipeline\n",
     "\n",
-    "if proc.returncode != 0:\n",
-    "    raise RuntimeError(\n",
-    "        f\"llm_pipeline.py failed with exit code {proc.returncode}\\n\\nSTDERR:\\n{proc.stderr}\"\n",
-    "    )"
+    "    report_out = run_llm_pipeline(\n",
+    "        seed_prompt=seed_prompt,\n",
+    "        output_root=\".\",\n",
+    "        provider=\"openai\",\n",
+    "        model_name=\"google/gemma-3n-e4b-it:free\",\n",
+    "        resume=False,\n",
+    "    )\n",
+    "    print(\"Pipeline completed successfully.\")\n",
+    "    print(\"Report path:\", report_out)\n",
+    "except Exception as exc:\n",
+    "    print(\"Pipeline failed with exception:\", str(exc))\n",
+    "    print(\"Detailed traceback:\\n\")\n",
+    "    traceback.print_exc()\n",
+    "    raise"
    ]
   },
   {
