--- a/kaggle_llm_pipeline_test.ipynb
+++ b/kaggle_llm_pipeline_test.ipynb
@@ -184,6 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import sys\n",
     "import traceback\n",
     "from pathlib import Path\n",
@@ -197,9 +198,66 @@
     "    sys.path.insert(0, str(repo_root))\n",
     "\n",
     "try:\n",
-    "    from llm_pipeline import run_llm_pipeline\n",
+    "    import llm_pipeline as lp\n",
+    "    from openai import OpenAI\n",
     "\n",
-    "    report_out = run_llm_pipeline(\n",
+    "    def _openai_compat_call(self, system_prompt: str, user_prompt: str) -> str:\n",
+    "        api_key = os.getenv(\"OPENAI_API_KEY\", \"\").strip()\n",
+    "        if not api_key:\n",
+    "            raise RuntimeError(\"Missing OPENAI_API_KEY environment variable\")\n",
+    "\n",
+    "        base_url = os.getenv(\"OPENAI_BASE_URL\", \"\").strip() or None\n",
+    "        client_kwargs = {\"api_key\": api_key}\n",
+    "        if base_url is not None:\n",
+    "            client_kwargs[\"base_url\"] = base_url\n",
+    "\n",
+    "        client = OpenAI(**client_kwargs)\n",
+    "\n",
+    "        extra_headers = {}\n",
+    "        http_referer = os.getenv(\"OPENAI_HTTP_REFERER\", \"\").strip()\n",
+    "        x_title = os.getenv(\"OPENAI_X_TITLE\", \"\").strip()\n",
+    "        if http_referer:\n",
+    "            extra_headers[\"HTTP-Referer\"] = http_referer\n",
+    "        if x_title:\n",
+    "            extra_headers[\"X-Title\"] = x_title\n",
+    "\n",
+    "        # Try normal system+user first; fallback to user-only for models/providers\n",
+    "        # that reject developer/system instructions (e.g. some free Gemma endpoints).\n",
+    "        try:\n",
+    "            response = client.chat.completions.create(\n",
+    "                model=self.model_name,\n",
+    "                temperature=0.4,\n",
+    "                messages=[\n",
+    "                    {\"role\": \"system\", \"content\": system_prompt},\n",
+    "                    {\"role\": \"user\", \"content\": user_prompt},\n",
+    "                ],\n",
+    "                extra_headers=extra_headers if extra_headers else None,\n",
+    "            )\n",
+    "            return response.choices[0].message.content or \"\"\n",
+    "        except Exception as first_exc:\n",
+    "            text = str(first_exc).lower()\n",
+    "            needs_fallback = \"developer instruction is not enabled\" in text\n",
+    "            if not needs_fallback:\n",
+    "                raise\n",
+    "\n",
+    "            merged_user_prompt = (\n",
+    "                \"Follow these instructions exactly:\\n\"\n",
+    "                f\"{system_prompt}\\n\\n\"\n",
+    "                \"User request:\\n\"\n",
+    "                f\"{user_prompt}\"\n",
+    "            )\n",
+    "            response = client.chat.completions.create(\n",
+    "                model=self.model_name,\n",
+    "                temperature=0.4,\n",
+    "                messages=[{\"role\": \"user\", \"content\": merged_user_prompt}],\n",
+    "                extra_headers=extra_headers if extra_headers else None,\n",
+    "            )\n",
+    "            return response.choices[0].message.content or \"\"\n",
+    "\n",
+    "    # Runtime monkey patch for compatibility in Kaggle clone.\n",
+    "    lp.LLMDirectorAgent._call_openai = _openai_compat_call\n",
+    "\n",
+    "    report_out = lp.run_llm_pipeline(\n",
     "        seed_prompt=seed_prompt,\n",
     "        output_root=\".\",\n",
     "        provider=\"openai\",\n",
