--- a/kaggle_llm_pipeline_test.ipynb
+++ b/kaggle_llm_pipeline_test.ipynb
@@ -184,24 +184,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import sys\n",
-    "import traceback\n",
-    "from pathlib import Path\n",
+    "import sys, os, traceback, time, random\n",
     "\n",
-    "repo_root = Path.cwd()\n",
-    "script_path = repo_root / \"llm_pipeline.py\"\n",
-    "if not script_path.exists():\n",
-    "    raise FileNotFoundError(f\"Cannot run pipeline: missing {script_path}\")\n",
+    "seed_prompt = (\n",
+    "    \"A lone astronaut drifts through the crystalline rings of Saturn, \"\n",
+    "    \"helmet visor reflecting a dying sun.\"\n",
+    ")\n",
+    "\n",
+    "# Locate the cloned repo\n",
+    "repo_root = None\n",
+    "for candidate in [\n",
+    "    \"/kaggle/working/tonmoy99_create-RL-Brain\",\n",
+    "    \"/kaggle/working\",\n",
+    "]:\n",
+    "    p = Path(candidate)\n",
+    "    if (p / \"llm_pipeline.py\").exists():\n",
+    "        repo_root = p\n",
+    "        break\n",
+    "if repo_root is None:\n",
+    "    for hit in Path(\"/kaggle/working\").rglob(\"llm_pipeline.py\"):\n",
+    "        repo_root = hit.parent\n",
+    "        break\n",
+    "if repo_root is None:\n",
+    "    raise FileNotFoundError(\"Cannot find llm_pipeline.py in /kaggle/working\")\n",
+    "\n",
+    "print(\"Using repo at:\", repo_root)\n",
+    "os.chdir(str(repo_root))\n",
     "\n",
     "if str(repo_root) not in sys.path:\n",
     "    sys.path.insert(0, str(repo_root))\n",
     "\n",
     "try:\n",
     "    import llm_pipeline as lp\n",
-    "    from openai import OpenAI\n",
+    "    from openai import OpenAI, RateLimitError as _OAIRateLimit\n",
+    "\n",
+    "    # ── Retry settings for free-tier rate limits ──\n",
+    "    MAX_RETRIES = 8\n",
+    "    BASE_DELAY  = 15   # seconds\n",
+    "    MAX_DELAY   = 120  # seconds\n",
     "\n",
     "    def _openai_compat_call(self, system_prompt: str, user_prompt: str) -> str:\n",
+    "        \"\"\"Drop-in replacement for LLMDirectorAgent._call_openai with:\n",
+    "        1) Exponential-backoff retry on 429 rate-limit errors\n",
+    "        2) System-message fallback for models that reject them\n",
+    "        \"\"\"\n",
     "        api_key = os.getenv(\"OPENAI_API_KEY\", \"\").strip()\n",
     "        if not api_key:\n",
     "            raise RuntimeError(\"Missing OPENAI_API_KEY environment variable\")\n",
@@ -221,38 +247,52 @@
     "        if x_title:\n",
     "            extra_headers[\"X-Title\"] = x_title\n",
     "\n",
-    "        # Try normal system+user first; fallback to user-only for models/providers\n",
-    "        # that reject developer/system instructions (e.g. some free Gemma endpoints).\n",
-    "        try:\n",
-    "            response = client.chat.completions.create(\n",
-    "                model=self.model_name,\n",
-    "                temperature=0.4,\n",
-    "                messages=[\n",
-    "                    {\"role\": \"system\", \"content\": system_prompt},\n",
-    "                    {\"role\": \"user\", \"content\": user_prompt},\n",
-    "                ],\n",
-    "                extra_headers=extra_headers if extra_headers else None,\n",
-    "            )\n",
-    "            return response.choices[0].message.content or \"\"\n",
-    "        except Exception as first_exc:\n",
-    "            text = str(first_exc).lower()\n",
-    "            needs_fallback = \"developer instruction is not enabled\" in text\n",
-    "            if not needs_fallback:\n",
+    "        # Build two possible message lists\n",
+    "        msgs_system = [\n",
+    "            {\"role\": \"system\", \"content\": system_prompt},\n",
+    "            {\"role\": \"user\", \"content\": user_prompt},\n",
+    "        ]\n",
+    "        merged_user_prompt = (\n",
+    "            \"Follow these instructions exactly:\\n\"\n",
+    "            f\"{system_prompt}\\n\\n\"\n",
+    "            \"User request:\\n\"\n",
+    "            f\"{user_prompt}\"\n",
+    "        )\n",
+    "        msgs_user_only = [{\"role\": \"user\", \"content\": merged_user_prompt}]\n",
+    "\n",
+    "        use_system = True  # start by trying system+user\n",
+    "\n",
+    "        for attempt in range(1, MAX_RETRIES + 1):\n",
+    "            messages = msgs_system if use_system else msgs_user_only\n",
+    "            try:\n",
+    "                response = client.chat.completions.create(\n",
+    "                    model=self.model_name,\n",
+    "                    temperature=0.4,\n",
+    "                    messages=messages,\n",
+    "                    extra_headers=extra_headers if extra_headers else None,\n",
+    "                )\n",
+    "                return response.choices[0].message.content or \"\"\n",
+    "\n",
+    "            except _OAIRateLimit as rate_err:\n",
+    "                # 429 – wait with exponential backoff + jitter then retry\n",
+    "                delay = min(BASE_DELAY * (2 ** (attempt - 1)), MAX_DELAY) + random.uniform(0, 5)\n",
+    "                print(f\"  [RATE-LIMIT] attempt {attempt}/{MAX_RETRIES}, \"\n",
+    "                      f\"sleeping {delay:.1f}s …\")\n",
+    "                time.sleep(delay)\n",
+    "\n",
+    "            except Exception as exc:\n",
+    "                text = str(exc).lower()\n",
+    "                if \"developer instruction is not enabled\" in text and use_system:\n",
+    "                    # Switch to user-only messages and retry immediately\n",
+    "                    print(\"  [FALLBACK] system role rejected → using user-only messages\")\n",
+    "                    use_system = False\n",
+    "                    continue\n",
     "                raise\n",
     "\n",
-    "            merged_user_prompt = (\n",
-    "                \"Follow these instructions exactly:\\n\"\n",
-    "                f\"{system_prompt}\\n\\n\"\n",
-    "                \"User request:\\n\"\n",
-    "                f\"{user_prompt}\"\n",
-    "            )\n",
-    "            response = client.chat.completions.create(\n",
-    "                model=self.model_name,\n",
-    "                temperature=0.4,\n",
-    "                messages=[{\"role\": \"user\", \"content\": merged_user_prompt}],\n",
-    "                extra_headers=extra_headers if extra_headers else None,\n",
-    "            )\n",
-    "            return response.choices[0].message.content or \"\"\n",
+    "        raise RuntimeError(\n",
+    "            f\"OpenRouter rate-limited after {MAX_RETRIES} retries. \"\n",
+    "            \"Wait a few minutes and re-run this cell.\"\n",
+    "        )\n",
     "\n",
     "    # Runtime monkey patch for compatibility in Kaggle clone.\n",
     "    lp.LLMDirectorAgent._call_openai = _openai_compat_call\n",
